--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Arts by Tina</title>
     <link rel="stylesheet" href="./src/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
 </head>
@@ -18,17 +18,53 @@
                     <li class="list-item"><a class ="top-link" href="#shop">Shop</a></li>
                     <li class="list-item"><a class ="top-link" href="#gallery">Gallery</a></li>
                     <li class="list-item"><a class ="top-link" href="#contact">Contact</a></li>
+                    <li class="list-item-logo">
+                        <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="25px">
+                                <path style="fill:#A9A9A9" d="M256,49.471c67.266,0,75.233.257,101.8,1.469,24.562,1.121,37.9,5.224,46.778,8.674a78.052,78.052,0,0,1,28.966,18.845,78.052,78.052,0,0,1,18.845,28.966c3.45,8.877,7.554,22.216,8.674,46.778,1.212,26.565,1.469,34.532,1.469,101.8s-0.257,75.233-1.469,101.8c-1.121,24.562-5.225,37.9-8.674,46.778a83.427,83.427,0,0,1-47.811,47.811c-8.877,3.45-22.216,7.554-46.778,8.674-26.56,1.212-34.527,1.469-101.8,1.469s-75.237-.257-101.8-1.469c-24.562-1.121-37.9-5.225-46.778-8.674a78.051,78.051,0,0,1-28.966-18.845,78.053,78.053,0,0,1-18.845-28.966c-3.45-8.877-7.554-22.216-8.674-46.778-1.212-26.564-1.469-34.532-1.469-101.8s0.257-75.233,1.469-101.8c1.121-24.562,5.224-37.9,8.674-46.778A78.052,78.052,0,0,1,78.458,78.458a78.053,78.053,0,0,1,28.966-18.845c8.877-3.45,22.216-7.554,46.778-8.674,26.565-1.212,34.532-1.469,101.8-1.469m0-45.391c-68.418,0-77,.29-103.866,1.516-26.815,1.224-45.127,5.482-61.151,11.71a123.488,123.488,0,0,0-44.62,29.057A123.488,123.488,0,0,0,17.3,90.982C11.077,107.007,6.819,125.319,5.6,152.134,4.369,179,4.079,187.582,4.079,256S4.369,333,5.6,359.866c1.224,26.815,5.482,45.127,11.71,61.151a123.489,123.489,0,0,0,29.057,44.62,123.486,123.486,0,0,0,44.62,29.057c16.025,6.228,34.337,10.486,61.151,11.71,26.87,1.226,35.449,1.516,103.866,1.516s77-.29,103.866-1.516c26.815-1.224,45.127-5.482,61.151-11.71a128.817,128.817,0,0,0,73.677-73.677c6.228-16.025,10.486-34.337,11.71-61.151,1.226-26.87,1.516-35.449,1.516-103.866s-0.29-77-1.516-103.866c-1.224-26.815-5.482-45.127-11.71-61.151a123.486,123.486,0,0,0-29.057-44.62A123.487,123.487,0,0,0,421.018,17.3C404.993,11.077,386.681,6.819,359.866,5.6,333,4.369,324.418,4.079,256,4.079h0Z"/>
+                                <path style="fill:#A9A9A9" d="M256,126.635A129.365,129.365,0,1,0,385.365,256,129.365,129.365,0,0,0,256,126.635Zm0,213.338A83.973,83.973,0,1,1,339.974,256,83.974,83.974,0,0,1,256,339.973Z"/>
+                                <circle style="fill:#A9A9A9" cx="390.476" cy="121.524" r="30.23"/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="list-item-logo">
+                        <a href="https://www.youtube.com/@canart6897" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" id="Layer_1" width="30.412064" height="20" x="0" y="0" version="1.1" viewBox="0 0 71.412065 50">
+                                <style id="style3" type="text/css"></style>
+                                <g id="g5" transform="scale(.58824)">
+                                <path id="path7" fill="#A9A9A9" fill-opacity="1" d="M118.9 13.3c-1.4-5.2-5.5-9.3-10.7-10.7C98.7 0 60.7 0 60.7 0s-38 0-47.5 2.5C8.1 3.9 3.9 8.1 2.5 13.3 0 22.8 0 42.5 0 42.5s0 19.8 2.5 29.2C3.9 76.9 8 81 13.2 82.4 22.8 85 60.7 85 60.7 85s38 0 47.5-2.5c5.2-1.4 9.3-5.5 10.7-10.7 2.5-9.5 2.5-29.2 2.5-29.2s.1-19.8-2.5-29.3z"/>
+                                <path id="polygon9" fill="#fff" d="M80.2 42.5 48.6 24.3v36.4z"/>
+                                </g>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
     </header>
     <section id="hero" class="hero">
         <div class="hero-banner">
-            <h1>Arts by Tina</h1>
+            <img src="./src/images/logo.png" class="logo">
         </div>
     </section>
     <section id="collection" class="collection">
-        
+        <div class="gallery">
+            <span class="picture-row">
+                <img src="./src/images/Husky with coloured pencils.jpg" class="outer-picture">
+                <img src="./src/images/Brady- Coloured Pencils.jpg" class="inner-picture">
+                <img src="./src/images/Boston Terrier with Coloured Pencils.jpg" class="outer-picture">
+            </span>
+            <span class="picture-row">
+                <img src="./src/images/tweety with pencils.jpg" class="outer-picture">
+                <img src="./src/images/Cougar- Graphite Pencils.jpg" class="inner-picture">
+                <img src="./src/images/horse.jpg" class="outer-picture">
+            </span>
+            <span class="picture-row">
+                <img src="./src/images/Spaniel.jpg" class="outer-picture">
+                <img src="./src/images/Aussie.jpg" class="inner-picture">
+                <img src="./src/images/Pug with coloured pencils.jpg" class="outer-picture">
+            </span>
+        </div>
     </section>
     <footer>
         
