--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <header>
         <nav class="navbar">
             <div class="nav-div">
-                <h1 class="front-page"><a class="front-page" href="#hero">Arts by Tina</a></h1>
+                <h1 class="front-page"><a class="front-page" href="#hero"><img src="./src/images/ear-logo.png" class="nav-logo"></a></h1>
                 <ul class="list">
-                    <li class="list-item"><a class ="top-link" href="#about">About</a></l1>
-                    <li class="list-item"><a class ="top-link" href="#shop">Shop</a></li>
                     <li class="list-item"><a class ="top-link" href="#gallery">Gallery</a></li>
+                    <li class="list-item"><a class ="top-link" href="#comissions">Comissions</a></li>
                     <li class="list-item"><a class ="top-link" href="#contact">Contact</a></li>
                     <li class="list-item-logo">
                         <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer">
@@ -45,10 +44,12 @@
     <section id="hero" class="hero">
         <div class="hero-banner">
             <img src="./src/images/logo.png" class="logo">
+            <a href="#gallery" class="gallery-link">View Artwork</a>
         </div>
     </section>
-    <section id="collection" class="collection">
+    <section id="gallery">
         <div class="gallery">
+            <h2>Gallery</h2>
             <span class="picture-row">
                 <img src="./src/images/Husky with coloured pencils.jpg" class="outer-picture">
                 <img src="./src/images/Brady- Coloured Pencils.jpg" class="inner-picture">
@@ -64,6 +65,33 @@
                 <img src="./src/images/Aussie.jpg" class="inner-picture">
                 <img src="./src/images/Pug with coloured pencils.jpg" class="outer-picture">
             </span>
+            <a class="link">Load more</a>
+        </div>
+    </section>
+    <section id="comissions">
+        <div class="comissions">
+            <h2>Comissions</h2>
+            <ul class="comission-information">
+                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur harum ipsa ab asperiores ipsam sequi, cum veritatis, praesentium, ad quam et. Laboriosam atque qui tenetur nulla quis quibusdam ex?</li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident non facilis unde. Perferendis animi aut eligendi odio reiciendis odit corporis obcaecati. Asperiores amet consequuntur nesciunt facere optio, ex odio ullam?</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat natus placeat unde aperiam, dolores excepturi deserunt adipisci! Reiciendis dolores soluta culpa! Voluptate, at magnam nemo eveniet tempora esse ducimus quos!</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias excepturi ducimus accusamus doloribus, non animi atque deleniti quibusdam enim totam assumenda repellendus aperiam perferendis obcaecati quaerat molestiae libero ullam eos.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias excepturi ducimus accusamus doloribus, non animi atque deleniti quibusdam enim totam assumenda repellendus aperiam perferendis obcaecati quaerat molestiae libero ullam eos.</li>
+            </ul>
+            <a class="link" href="#contact">Get in touch</a>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="contact">
+            <h2>Contact</h2>
+            <p class="contact-description">Please feel free to contact me with any inquiries about my art or comissions. If you have any questions about an order you placed, you can reach me @email</p>
+            <form class="contact-form">
+                <input class="name form" type="text" placeholder="Full Name">
+                <input class="email form" type="email" placeholder="Email">
+                <input class="phone form" type="tel" placeholder="Phone Number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+                <textarea class="message form" placeholder="Message"></textarea>
+                <button class="submit form" type="submit">Submit</button>
+            </form>
         </div>
     </section>
     <footer>
