Added function to display more pictures

--- a/index.html
+++ b/index.html
@@ -76,7 +76,27 @@
                 <img src="./src/images/Aussie.jpg" class="inner-picture">
                 <img src="./src/images/Pug with coloured pencils.jpg" class="outer-picture">
             </span>
-            <a class="link">Load more</a>
+            <span class="hidden-pic h">
+                <img src="./src/images/small dog.jpg" class="outer-picture">
+                <img src="./src/images/border collie.jpg" class="inner-picture">
+                <img src="./src/images/Cat- Coloured Pencils.jpg" class="outer-picture">
+            </span>
+            <span class="hidden-pic h">
+                <img src="./src/images/horse 2.jpg" class="outer-picture">
+                <img src="./src/images/grizzly bear 2.jpg" class="inner-picture">
+                <img src="./src/images/golden retriever 3.jpg" class="outer-picture">
+            </span>
+            <span class="hidden-pic h">
+                <img src="./src/images/greyhound.jpg" class="outer-picture">
+                <img src="./src/images/Pitbull.jpg" class="inner-picture">
+                <img src="./src/images/staffy.jpg" class="outer-picture">
+            </span>
+            <span class="hidden-pic h">
+                <img src="./src/images/ciro pencils.jpg" class="outer-picture">
+                <img src="./src/images/Golden retriever 2.jpg" class="inner-picture">
+                <img src="./src/images/Grizzly Bear- Pastel Painting.jpg" class="outer-picture">
+            </span>
+            <a  id="link" class="link" onclick="reveal()">Load more</a>
         </div>
     </section>
     <section id="comissions">
@@ -105,6 +125,7 @@
             </form>
         </div>
     </section>
+    <script src="./src/index.js"></script>
     <footer>
         
     </footer>
