Added function to enlarge images on click

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1 class="front-page"><a class="front-page" href="#hero"><img src="./src/images/ear-logo.png" class="nav-logo"></a></h1>
                 <ul class="list">
                     <li class="list-item"><a class ="top-link" href="#gallery">Gallery</a></li>
-                    <li class="list-item"><a class ="top-link" href="#comissions">Comissions</a></li>
+                    <li class="list-item"><a class ="top-link" href="#commissions">Commissions</a></li>
                     <li class="list-item"><a class ="top-link" href="#contact">Contact</a></li>
                     <li class="list-item-logo">
                         <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer">
@@ -56,7 +56,7 @@
                 </div>
                 <div id="dropDown" class="drop-content">
                     <a class ="nav-hidden" href="#gallery">Gallery</a>                            
-                    <a class ="nav-hidden" href="#comissions">Comissions</a>
+                    <a class ="nav-hidden" href="#commissions">Commissions</a>
                     <a class="nav-hidden" href="#contact">Contact</a>
                     <a class="nav-hidden" href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer">Instagram</a>
                     <a class="nav-hidden" href="https://www.youtube.com/@canart6897" target="_blank" rel="noopener noreferrer">Youtube</a>
@@ -75,47 +75,51 @@
         <div class="gallery">
             <h2>Gallery</h2>
             <span class="picture-row">
-                <img src="./src/images/Husky with coloured pencils.jpg" class="outer-picture">
-                <img src="./src/images/Brady- Coloured Pencils.jpg" class="inner-picture">
-                <img src="./src/images/Boston Terrier with Coloured Pencils.jpg" class="outer-picture">
+                <img src="./src/images/Husky with coloured pencils.jpg" class="outer-picture pic">
+                <img src="./src/images/Brady- Coloured Pencils.jpg" class="inner-picture pic">
+                <img src="./src/images/Boston Terrier with Coloured Pencils.jpg" class="outer-picture pic">
             </span>
             <span class="picture-row">
-                <img src="./src/images/tweety with pencils.jpg" class="outer-picture">
-                <img src="./src/images/Cougar- Graphite Pencils.jpg" class="inner-picture">
-                <img src="./src/images/horse.jpg" class="outer-picture">
+                <img src="./src/images/tweety with pencils.jpg" class="outer-picture pic">
+                <img src="./src/images/Cougar- Graphite Pencils.jpg" class="inner-picture pic">
+                <img src="./src/images/horse.jpg" class="outer-picture pic">
             </span>
             <span class="picture-row">
-                <img src="./src/images/Spaniel.jpg" class="outer-picture">
-                <img src="./src/images/Aussie.jpg" class="inner-picture">
-                <img src="./src/images/Pug with coloured pencils.jpg" class="outer-picture">
+                <img src="./src/images/Spaniel.jpg" class="outer-picture pic">
+                <img src="./src/images/Aussie.jpg" class="inner-picture pic">
+                <img src="./src/images/Pug with coloured pencils.jpg" class="outer-picture pic">
             </span>
             <span class="hidden-pic h">
-                <img src="./src/images/small dog.jpg" class="outer-picture">
-                <img src="./src/images/border collie.jpg" class="inner-picture">
-                <img src="./src/images/Cat- Coloured Pencils.jpg" class="outer-picture">
+                <img src="./src/images/small dog.jpg" class="outer-picture pic">
+                <img src="./src/images/border collie.jpg" class="inner-picture pic">
+                <img src="./src/images/Cat- Coloured Pencils.jpg" class="outer-picture pic">
             </span>
             <span class="hidden-pic h">
-                <img src="./src/images/horse 2.jpg" class="outer-picture">
-                <img src="./src/images/grizzly bear 2.jpg" class="inner-picture">
-                <img src="./src/images/golden retriever 3.jpg" class="outer-picture">
+                <img src="./src/images/horse 2.jpg" class="outer-picture pic">
+                <img src="./src/images/grizzly bear 2.jpg" class="inner-picture pic">
+                <img src="./src/images/golden retriever 3.jpg" class="outer-picture pic">
             </span>
             <span class="hidden-pic h">
-                <img src="./src/images/greyhound.jpg" class="outer-picture">
-                <img src="./src/images/Pitbull.jpg" class="inner-picture">
-                <img src="./src/images/staffy.jpg" class="outer-picture">
+                <img src="./src/images/greyhound.jpg" class="outer-picture pic">
+                <img src="./src/images/Pitbull.jpg" class="inner-picture pic">
+                <img src="./src/images/staffy.jpg" class="outer-picture pic">
             </span>
             <span class="hidden-pic h">
-                <img src="./src/images/ciro pencils.jpg" class="outer-picture">
-                <img src="./src/images/Golden retriever 2.jpg" class="inner-picture">
-                <img src="./src/images/Grizzly Bear- Pastel Painting.jpg" class="outer-picture">
+                <img src="./src/images/ciro pencils.jpg" class="outer-picture pic">
+                <img src="./src/images/Golden retriever 2.jpg" class="inner-picture pic">
+                <img src="./src/images/Grizzly Bear- Pastel Painting.jpg" class="outer-picture pic">
             </span>
             <a  id="link" class="link" onclick="reveal()">Load more</a>
+            <div class="popup-image">
+                <span>&times;</span>
+                <img src="./src/images/Husky with coloured pencils.jpg">
+            </div>
         </div>
     </section>
-    <section id="comissions">
-        <div class="comissions">
-            <h2>Comissions</h2>
-            <ul class="comission-information">
+    <section id="commissions">
+        <div class="commissions">
+            <h2>Commissions</h2>
+            <ul class="commission-information">
                 <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur harum ipsa ab asperiores ipsam sequi, cum veritatis, praesentium, ad quam et. Laboriosam atque qui tenetur nulla quis quibusdam ex?</li>
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident non facilis unde. Perferendis animi aut eligendi odio reiciendis odit corporis obcaecati. Asperiores amet consequuntur nesciunt facere optio, ex odio ullam?</li>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat natus placeat unde aperiam, dolores excepturi deserunt adipisci! Reiciendis dolores soluta culpa! Voluptate, at magnam nemo eveniet tempora esse ducimus quos!</li>
@@ -128,11 +132,10 @@
     <section id="contact">
         <div class="contact">
             <h2>Contact</h2>
-            <p class="contact-description">Please feel free to contact me with any inquiries about my art or comissions. If you have any questions about an order you placed, you can reach me @email</p>
+            <p class="contact-description">Please feel free to contact me with any inquiries about my art or commissions. If you have any questions about an order you placed, you can reach me at can.draw.art@gmail.com</p>
             <form class="contact-form">
                 <input class="name form" type="text" placeholder="Full Name">
                 <input class="email form" type="email" placeholder="Email">
-                <input class="phone form" type="tel" placeholder="Phone Number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
                 <textarea class="message form" placeholder="Message"></textarea>
                 <button class="submit form" type="submit">Submit</button>
             </form>
