Updated contact html and styling

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
     <section id="contact">
         <div class="contact">
             <h2>Contact</h2>
-            <p class="contact-description">Please feel free to contact me with any inquiries about my art or commissions. If you have any questions about an order you placed, you can reach me at can.draw.art@gmail.com</p>
+            <p class="contact-description">For questions about commissioning a custom drawing, purchasing an original piece of my artwork, or inquiries about anything else, please fill out the email request below or message me directly through <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer" class="insta">Instagram</a><br><br>Email: can.draw.art@gmail.com
+            </p>
             <form class="contact-form">
                 <input class="name form" type="text" placeholder="Full Name">
                 <input class="email form" type="email" placeholder="Email">
