--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
     <section id="gallery">
         <div class="gallery">
-            <h2>Gallery</h2>
+            <h2 class="gallery-header">Gallery</h2>
             <span class="picture-row">
                 <img src="./src/images/Husky with coloured pencils.jpg" class="outer-picture pic">
                 <img src="./src/images/Brady- Coloured Pencils.jpg" class="inner-picture pic">
