Added image to contact section and adjusted styling

--- a/index.html
+++ b/index.html
@@ -132,8 +132,13 @@
     <section id="contact">
         <div class="contact">
             <h2>Contact</h2>
-            <p class="contact-description">For questions about commissioning a custom drawing, purchasing an original piece of my artwork, or inquiries about anything else, please fill out the email request below or message me directly through <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer" class="insta">Instagram</a><br><br>Email: can.draw.art@gmail.com
-            </p>
+            <span class="contact-contents">
+                <p class="contact-description">For questions about commissioning a custom drawing, purchasing an original piece of my artwork, or inquiries about anything else, please fill out the email request below or message me directly through <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer" class="insta">Instagram</a><br><br>Email: can.draw.art@gmail.com
+                </p>
+                <div class="contact-pic-div">
+                    <img src="./src/images/tweety png no background.png" class="contact-picture">
+                </div>
+            </span>
             <form class="contact-form">
                 <input class="name form" type="text" placeholder="Full Name">
                 <input class="email form" type="email" placeholder="Email">
