--- a/index.html
+++ b/index.html
@@ -119,12 +119,44 @@
     <section id="commissions">
         <div class="commissions">
             <h2>Commissions</h2>
+            <h3>I am now taking bookings for 2023, please feel free to <a class="text-link" href="#contact">get in touch!</a>
+            </h3>
             <ul class="commission-information">
-                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur harum ipsa ab asperiores ipsam sequi, cum veritatis, praesentium, ad quam et. Laboriosam atque qui tenetur nulla quis quibusdam ex?</li>
-                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident non facilis unde. Perferendis animi aut eligendi odio reiciendis odit corporis obcaecati. Asperiores amet consequuntur nesciunt facere optio, ex odio ullam?</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat natus placeat unde aperiam, dolores excepturi deserunt adipisci! Reiciendis dolores soluta culpa! Voluptate, at magnam nemo eveniet tempora esse ducimus quos!</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias excepturi ducimus accusamus doloribus, non animi atque deleniti quibusdam enim totam assumenda repellendus aperiam perferendis obcaecati quaerat molestiae libero ullam eos.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias excepturi ducimus accusamus doloribus, non animi atque deleniti quibusdam enim totam assumenda repellendus aperiam perferendis obcaecati quaerat molestiae libero ullam eos.</li>
+                <li>Pet portraits capture the vitality and personality that a photograph cannot, making them a memorable and one-of-a-kind way to remember your closest companion. The commission process is simple: to reserve your booking, all I need is a high-resolution photograph and a 30% deposit to secure your spot on my commission list. Once we have decided on the perfect composition, I can start working on your custom drawing! I always send updates as I work, allowing you to watch your pet come to life on paper before your very eyes. </li>
+                <li><span class="prices-span"><h4>2023 Price List</h4><img src="./src/images/prices.png" class="prices"></span></li>
+                <li>Once you have decided on a size, please contact me via email at can.draw.art@gmail.com or message me on Instagram. I will send you an invoice for 30% of the total amount (payable via e-transfer or PayPal) to reserve your place on my commission list. Once the drawing is finished and to your satisfaction, the remaining 70% of the payment, plus shipping fees, will be sent in another invoice. Depending on the size, portraits can take anywhere from 1-4 weeks to finish (not including shipping time), so if the portrait is for a particular event, please reserve a spot in advance to allow for enough time.</li>
+                <li>Please get in touch with me for a free quote if you’d like a custom size, background, or more than 3 pets in one portrait.</li>
+                <li><span class="reference"><h4>Reference Photo</h4>Since I work directly from a reference photograph, the process of designing your pet portrait involves taking the ideal photo, which is a crucial step. Please feel free to email me your pictures, and I'll let you know whether or not they're appropriate.</span></li>
+                <li><h5>Good:</h5>
+                    <span class="reference-span">
+                        <ul class="reference-list">
+                            <li>High resolution photograph, preferable taken with a digital camera so that details in the eyes and face hairs are visible</li>
+                            <li>Natural lighting ex. overcast day</li>
+                            <li>Taken at the same level as your dog</li>
+                        </ul>
+                        <figure>
+                            <img src="./src/images/Good photo.jpg" class="good-pic">
+                            <figcaption>Ex. Excellent photo quality, natural daylight, at eye level with dog.
+                            </figcaption>
+                        </figure>
+                    </span>
+                </li>
+                <li><h5>Avoid:</h5>
+                    <span class="reference-span">
+                        <ul class="reference-list">
+                            <li>Blurry or low quality photos, and action shots</li>
+                            <li>Direct sunlight that creates intense shadows, or washed out images</li>
+                            <li>Photos taken from too far away or at unflattering angles</li>
+                        </ul>
+                        <figure>
+                            <img src="./src/images/Bad photo 1.jpg" class="good-pic">
+                            <img src="./src/images/bad photo 2.jpg" class="good-pic">
+                            <figcaption>Ex. Harsh, direct sunlight, heavy shadows, grainy, taken too far away, eyes not clear.
+                            </figcaption>
+                        </figure>
+                    </span>
+                </li>
+                <li><h4>Shipping</h4>Portraits are shipped within 3 business days of receiving the final payment. I send portraits with tracking numbers and a delivery signature requirement through Canada Post. Once I receive your postal address, I will contact you directly for your individual shipping quote. Please note that portraits sent outside of Canada may be subject to customs charges upon delivery. All sales are final; I am not liable for any potential damage after the drawing has been delivered to the post office.</li>
             </ul>
             <a class="link" href="#contact">Get in touch</a>
         </div>
