Styled commission section

--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
             <ul class="commission-information">
                 <li>Pet portraits capture the vitality and personality that a photograph cannot, making them a memorable and one-of-a-kind way to remember your closest companion. The commission process is simple: to reserve your booking, all I need is a high-resolution photograph and a 30% deposit to secure your spot on my commission list. Once we have decided on the perfect composition, I can start working on your custom drawing! I always send updates as I work, allowing you to watch your pet come to life on paper before your very eyes. </li>
                 <li><span class="prices-span"><h4>2023 Price List</h4><img src="./src/images/prices.png" class="prices"></span></li>
-                <li>Once you have decided on a size, please contact me via email at can.draw.art@gmail.com or message me on Instagram. I will send you an invoice for 30% of the total amount (payable via e-transfer or PayPal) to reserve your place on my commission list. Once the drawing is finished and to your satisfaction, the remaining 70% of the payment, plus shipping fees, will be sent in another invoice. Depending on the size, portraits can take anywhere from 1-4 weeks to finish (not including shipping time), so if the portrait is for a particular event, please reserve a spot in advance to allow for enough time.</li>
+                <li>Once you have decided on a size, please contact me via email at can.draw.art@gmail.com or message me on <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer" class="insta">Instagram</a>. I will send you an invoice for 30% of the total amount (payable via e-transfer or PayPal) to reserve your place on my commission list. Once the drawing is finished and to your satisfaction, the remaining 70% of the payment, plus shipping fees, will be sent in another invoice. Depending on the size, portraits can take anywhere from 1-4 weeks to finish (not including shipping time), so if the portrait is for a particular event, please reserve a spot in advance to allow for enough time.</li>
                 <li>Please get in touch with me for a free quote if you’d like a custom size, background, or more than 3 pets in one portrait.</li>
                 <li><span class="reference"><h4>Reference Photo</h4>Since I work directly from a reference photograph, the process of designing your pet portrait involves taking the ideal photo, which is a crucial step. Please feel free to email me your pictures, and I'll let you know whether or not they're appropriate.</span></li>
                 <li><h5>Good:</h5>
                     <span class="reference-span">
                         <ul class="reference-list">
-                            <li>High resolution photograph, preferable taken with a digital camera so that details in the eyes and face hairs are visible</li>
+                            <li>High resolution photograph, preferably taken with a digital camera so that details in the eyes and face hairs are visible</li>
                             <li>Natural lighting ex. overcast day</li>
                             <li>Taken at the same level as your dog</li>
                         </ul>
@@ -149,8 +149,8 @@
                             <li>Photos taken from too far away or at unflattering angles</li>
                         </ul>
                         <figure>
-                            <img src="./src/images/Bad photo 1.jpg" class="good-pic">
-                            <img src="./src/images/bad photo 2.jpg" class="good-pic">
+                            <img src="./src/images/Bad photo 1.jpg" class="bad-pic">
+                            <img src="./src/images/bad photo 2.jpg" class="bad-pic">
                             <figcaption>Ex. Harsh, direct sunlight, heavy shadows, grainy, taken too far away, eyes not clear.
                             </figcaption>
                         </figure>
