Added responsive styling for text area

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                 <img src="./src/images/Golden retriever 2.jpg" class="inner-picture pic">
                 <img src="./src/images/Grizzly Bear- Pastel Painting.jpg" class="outer-picture pic">
             </span>
+            <span class="hidden-pic h">
+                <img src="./src/images/corgi.jpg" class="outer-picture pic">
+            </span>
             <a  id="link" class="link" onclick="reveal()">Load more</a>
             <div class="popup-image">
                 <span>&times;</span>
@@ -136,7 +139,7 @@
                         </ul>
                         <figure>
                             <img src="./src/images/Good photo.jpg" class="good-pic">
-                            <figcaption>Ex. Excellent photo quality, natural daylight, at eye level with dog.
+                            <figcaption  class="good-caption">Ex. Excellent photo quality, natural daylight, at eye level with dog.
                             </figcaption>
                         </figure>
                     </span>
@@ -151,7 +154,7 @@
                         <figure>
                             <img src="./src/images/Bad photo 1.jpg" class="bad-pic">
                             <img src="./src/images/bad photo 2.jpg" class="bad-pic">
-                            <figcaption>Ex. Harsh, direct sunlight, heavy shadows, grainy, taken too far away, eyes not clear.
+                            <figcaption class="bad-caption">Ex. Harsh, direct sunlight, heavy shadows, grainy, taken too far away, eyes not clear.
                             </figcaption>
                         </figure>
                     </span>
