Added mailto on contact section

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <input class="name form" type="text" placeholder="Full Name">
                 <input class="email form" type="email" placeholder="Email">
                 <textarea class="message form" placeholder="Message"></textarea>
-                <button class="submit form" type="submit">Submit</button>
+                <a class="submit form" href="mailto:can.draw.art@gmail.com">Submit</a>
             </form>
         </div>
     </section>
