Added button to copy email address to clipboard

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="contact">
             <h2>Contact</h2>
             <span class="contact-contents">
-                <p class="contact-description">For questions about commissioning a custom drawing, purchasing an original piece of my artwork, or inquiries about anything else, please fill out the email request below or message me directly through <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer" class="insta">Instagram</a><br><br>Email: can.draw.art@gmail.com
+                <p class="contact-description">For questions about commissioning a custom drawing, purchasing an original piece of my artwork, or inquiries about anything else, please fill out the email request below or message me directly through <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer" class="insta">Instagram</a><br><br>Email: <a id="email">can.draw.art@gmail.com</a><button class="email-copy" onclick="copy()">Copy</button>
                 </p>
                 <div class="contact-pic-div">
                     <img src="./src/images/tweety png no background.png" class="contact-picture">
