Added testimonials section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,21 @@
                 <img src="./src/images/Husky with coloured pencils.jpg">
             </div>
         </div>
+        <div class="testimonials">
+            <h4 class="testimonials-header">Testimonials</h4>
+            <figure class="left">
+                <img src="./src/images/Brady- Coloured Pencils.jpg" class="testimonial-pic">
+                <figcaption class="left-figcaption">“We are blown away by the picture you drew of Sadie, our beloved family dog who passed. It has made so many people happy!”</figcaption>
+            </figure>
+            <figure class="right">
+                <img src="./src/images/Aussie.jpg" class="testimonial-pic">
+                <figcaption class="right-figcaption">“My aunt burst into tears when she opened your drawing on Christmas morning. Words cannot describe how thankful we are.”</figcaption>
+            </figure>
+            <figure class="left">
+                <img src="./src/images/border collie.jpg" class="testimonial-pic">
+                <figcaption class="left-figcaption">“I am at a loss for words. You have perfectly captured the kindness in his eyes and his happy-go-lucky demeanour. I will cherish this piece forever.”</figcaption>
+            </figure>
+        </div>
     </section>
     <section id="commissions">
         <div class="commissions">
@@ -137,7 +152,7 @@
                             <li>Natural lighting ex. overcast day</li>
                             <li>Taken at the same level as your dog</li>
                         </ul>
-                        <figure>
+                        <figure class="ref-fig">
                             <img src="./src/images/Good photo.jpg" class="good-pic">
                             <figcaption  class="good-caption">Ex. Excellent photo quality, natural daylight, at eye level with dog.
                             </figcaption>
@@ -151,7 +166,7 @@
                             <li>Direct sunlight that creates intense shadows, or washed out images</li>
                             <li>Photos taken from too far away or at unflattering angles</li>
                         </ul>
-                        <figure>
+                        <figure class="ref-fig">
                             <img src="./src/images/Bad photo 1.jpg" class="bad-pic">
                             <img src="./src/images/bad photo 2.jpg" class="bad-pic">
                             <figcaption class="bad-caption">Ex. Harsh, direct sunlight, heavy shadows, grainy, taken too far away, eyes not clear.
