Created prices table

--- a/index.html
+++ b/index.html
@@ -138,7 +138,67 @@
             </h3>
             <ul class="commission-information">
                 <li>Pet portraits capture the vitality and personality that a photograph cannot, making them a memorable and one-of-a-kind way to remember your closest companion. The commission process is simple: to reserve your booking, all I need is a high-resolution photograph and a 30% deposit to secure your spot on my commission list. Once we have decided on the perfect composition, I can start working on your custom drawing! I always send updates as I work, allowing you to watch your pet come to life on paper before your very eyes. </li>
-                <li><span class="prices-span"><h4>2023 Price List</h4><img src="./src/images/prices.png" class="prices"></span></li>
+                <li>
+                    <span class="prices-span">
+                        <h4>2023 Price List</h4>
+                        <table class="prices">
+                            <tr>
+                                <th>Size (inches)</th>
+                                <th class="middle">One pet</th>
+                                <th class="middle">Two pets</th>
+                                <th >Three pets</th>
+                            </tr>
+                            <tr>
+                                <td>4x6</td>
+                                <td class="middle">$200</td>
+                                <td class="middle">-</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <td>6x8</td>
+                                <td class="middle">$300</td>
+                                <td class="middle">-</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <td>8x10</td>
+                                <td class="middle">$400</td>
+                                <td class="middle">-</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <td>10x12</td>
+                                <td class="middle">$500</td>
+                                <td class="middle">-</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <td>11x14</td>
+                                <td class="middle">$600</td>
+                                <td class="middle">$750</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <td>14x17</td>
+                                <td class="middle">$750</td>
+                                <td class="middle">$900</td>
+                                <td>$1050</td>
+                            </tr>
+                            <tr>
+                                <td>16x20</td>
+                                <td class="middle">$1000</td>
+                                <td class="middle">$1250</td>
+                                <td>$1400</td>
+                            </tr>
+                            <tr>
+                                <td>18x24</td>
+                                <td class="middle">$1500</td>
+                                <td class="middle">$1875</td>
+                                <td>$2000</td>
+                            </tr>
+                        </table>
+                    </span>
+                </li>
                 <li>Once you have decided on a size, please contact me via email at can.draw.art@gmail.com or message me on <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer" class="insta">Instagram</a>. I will send you an invoice for 30% of the total amount (payable via e-transfer or PayPal) to reserve your place on my commission list. Once the drawing is finished and to your satisfaction, the remaining 70% of the payment, plus shipping fees, will be sent in another invoice. Depending on the size, portraits can take anywhere from 1-4 weeks to finish (not including shipping time), so if the portrait is for a particular event, please reserve a spot in advance to allow for enough time.</li>
                 <li>Please get in touch with me for a free quote if you’d like a custom size, background, or more than 3 pets in one portrait.</li>
                 <li><span class="reference"><h4>Reference Photo</h4>Since I work directly from a reference photograph, the process of designing your pet portrait involves taking the ideal photo, which is a crucial step. Please feel free to email me your pictures, and I'll let you know whether or not they're appropriate.</span></li>
