Added currency selector html

--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
                 <li>
                     <span class="prices-span">
                         <h4>2023 Price List</h4>
+                        <div class="selection">
+                            <h6>Select your currency</h6>
+                            <select id="selection"></select>
+                        </div>
                         <table class="prices">
                             <tr>
                                 <th>Size (inches)</th>
