Fetch currency choices and insert into selection optiions

--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
                         <h4>2023 Price List</h4>
                         <div class="selection">
                             <h6>Select your currency</h6>
-                            <select id="selection"></select>
+                            <select id="selection">
+                                <option>CAD</option>
+                            </select>
                         </div>
                         <table class="prices">
                             <tr>
