--- a/index.html
+++ b/index.html
@@ -150,57 +150,57 @@
                         <table class="prices">
                             <tr>
                                 <th>Size (inches)</th>
-                                <th class="middle">One pet</th>
-                                <th class="middle">Two pets</th>
+                                <th >One pet</th>
+                                <th >Two pets</th>
                                 <th >Three pets</th>
                             </tr>
                             <tr>
                                 <td>4x6</td>
-                                <td class="middle">$200</td>
-                                <td class="middle">-</td>
+                                <td class="num" id="test">$200</td>
+                                <td>-</td>
                                 <td>-</td>
                             </tr>
                             <tr>
                                 <td>6x8</td>
-                                <td class="middle">$300</td>
-                                <td class="middle">-</td>
+                                <td class="num">$300</td>
+                                <td>-</td>
                                 <td>-</td>
                             </tr>
                             <tr>
                                 <td>8x10</td>
-                                <td class="middle">$400</td>
-                                <td class="middle">-</td>
+                                <td class="num">$400</td>
+                                <td>-</td>
                                 <td>-</td>
                             </tr>
                             <tr>
                                 <td>10x12</td>
-                                <td class="middle">$500</td>
-                                <td class="middle">-</td>
+                                <td class="num">$500</td>
+                                <td>-</td>
                                 <td>-</td>
                             </tr>
                             <tr>
                                 <td>11x14</td>
-                                <td class="middle">$600</td>
-                                <td class="middle">$750</td>
+                                <td class="num">$600</td>
+                                <td class="num">$750</td>
                                 <td>-</td>
                             </tr>
                             <tr>
                                 <td>14x17</td>
-                                <td class="middle">$750</td>
-                                <td class="middle">$900</td>
-                                <td>$1050</td>
+                                <td class="num">$750</td>
+                                <td class="num">$900</td>
+                                <td class="num">$1050</td>
                             </tr>
                             <tr>
                                 <td>16x20</td>
-                                <td class="middle">$1000</td>
-                                <td class="middle">$1250</td>
-                                <td>$1400</td>
+                                <td class="num">$1000</td>
+                                <td class="num">$1250</td>
+                                <td class="num">$1400</td>
                             </tr>
                             <tr>
                                 <td>18x24</td>
-                                <td class="middle">$1500</td>
-                                <td class="middle">$1875</td>
-                                <td>$2000</td>
+                                <td class="num">$1500</td>
+                                <td class="num">$1875</td>
+                                <td class="num">$2000</td>
                             </tr>
                         </table>
                     </span>
