--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                     <span class="prices-span">
                         <h4>2023 Price List</h4>
                         <div class="selection">
-                            <h6>Select your currency</h6>
-                            <select id="selection">
+                            <h6>Select your currency for an approximate conversion</h6>
+                            <select id="selection" onchange="cc()">
                                 <option>CAD</option>
                             </select>
                         </div>
@@ -156,57 +156,57 @@
                             </tr>
                             <tr>
                                 <td>4x6</td>
-                                <td class="num" id="test">$200</td>
+                                <td>$<span class="num">200</span></td>
                                 <td>-</td>
                                 <td>-</td>
                             </tr>
                             <tr>
                                 <td>6x8</td>
-                                <td class="num">$300</td>
+                                <td>$<span class="num">300</span></td>
                                 <td>-</td>
                                 <td>-</td>
                             </tr>
                             <tr>
                                 <td>8x10</td>
-                                <td class="num">$400</td>
+                                <td>$<span class="num">400</span></td>
                                 <td>-</td>
                                 <td>-</td>
                             </tr>
                             <tr>
                                 <td>10x12</td>
-                                <td class="num">$500</td>
+                                <td>$<span class="num">500</span></td>
                                 <td>-</td>
                                 <td>-</td>
                             </tr>
                             <tr>
                                 <td>11x14</td>
-                                <td class="num">$600</td>
-                                <td class="num">$750</td>
+                                <td>$<span class="num">600</span></td>
+                                <td>$<span class="num">750</span></td>
                                 <td>-</td>
                             </tr>
                             <tr>
                                 <td>14x17</td>
-                                <td class="num">$750</td>
-                                <td class="num">$900</td>
-                                <td class="num">$1050</td>
+                                <td>$<span class="num">750</span></td>
+                                <td>$<span class="num">900</span></td>
+                                <td>$<span class="num">1050</span></td>
                             </tr>
                             <tr>
                                 <td>16x20</td>
-                                <td class="num">$1000</td>
-                                <td class="num">$1250</td>
-                                <td class="num">$1400</td>
+                                <td>$<span class="num">1000</span></td>
+                                <td>$<span class="num">1250</span></td>
+                                <td>$<span class="num">1400</span></td>
                             </tr>
                             <tr>
                                 <td>18x24</td>
-                                <td class="num">$1500</td>
-                                <td class="num">$1875</td>
-                                <td class="num">$2000</td>
+                                <td>$<span class="num">1500</span></td>
+                                <td>$<span class="num">1875</span></td>
+                                <td>$<span class="num">2000</span></td>
                             </tr>
                         </table>
                     </span>
                 </li>
                 <li>Once you have decided on a size, please contact me via email at can.draw.art@gmail.com or message me on <a href="https://www.instagram.com/arts.by.tina/" target="_blank" rel="noopener noreferrer" class="insta">Instagram</a>. I will send you an invoice for 30% of the total amount (payable via e-transfer or PayPal) to reserve your place on my commission list. Once the drawing is finished and to your satisfaction, the remaining 70% of the payment, plus shipping fees, will be sent in another invoice. Depending on the size, portraits can take anywhere from 1-4 weeks to finish (not including shipping time), so if the portrait is for a particular event, please reserve a spot in advance to allow for enough time.</li>
-                <li>Please get in touch with me for a free quote if you’d like a custom size, background, or more than 3 pets in one portrait.</li>
+                <li>Please get in touch with me for a free quote if you'd like a custom size, background, or more than 3 pets in one portrait.</li>
                 <li><span class="reference"><h4>Reference Photo</h4>Since I work directly from a reference photograph, the process of designing your pet portrait involves taking the ideal photo, which is a crucial step. Please feel free to email me your pictures, and I'll let you know whether or not they're appropriate.</span></li>
                 <li><h5>Good:</h5>
                     <span class="reference-span">
