--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
                         <div class="selection">
                             <h6>Select your currency for an approximate conversion</h6>
                             <select id="selection" onchange="cc()">
-                                <option>CAD</option>
+                                <option value="CAD">CAD</option>
+                                <option value="USD">USD</option>
+                                <option value="EUR">EUR</option>
                             </select>
                         </div>
                         <table class="prices">
