--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </form>
         </div>
     </section>
-    <script src="./src/index.js"></script>
+    <script async src="./src/index.js"></script>
     <footer>
         
     </footer>
